// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the total and the list of items 1`] = `
{
  "items": [
    {
      "product": {
        "id": 1,
        "price": 35388,
        "title": "Adidas running shows - men",
      },
      "quantity": 2,
    },
    {
      "product": {
        "id": 2,
        "price": 41872,
        "title": "Adidas running shows - women",
      },
      "quantity": 3,
    },
  ],
  "total": {
    "amount": 196392,
    "currency": "BRL",
    "precision": 2,
  },
}
`;

exports[`Cart checkout() should return an object with the total and the list of items when the summary() is called 1`] = `
{
  "formatted": "R$1,963.9",
  "items": [
    {
      "product": {
        "id": 1,
        "price": 35388,
        "title": "Adidas running shows - men",
      },
      "quantity": 2,
    },
    {
      "product": {
        "id": 2,
        "price": 41872,
        "title": "Adidas running shows - women",
      },
      "quantity": 3,
    },
  ],
  "total": {
    "amount": 196392,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
